test: fix test